--- a/pages/ff145.md
+++ b/pages/ff145.md
@@ -11,3 +11,5 @@ using HTML or markdown.  Do not modify this file above this line -->
 
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
 <hr>
+<h3>Preferred Citation:</h3>
+<i>Major Jackson Interview, 9/23/2004 (FF145)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF145. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
