--- a/pages/ff010.md
+++ b/pages/ff010.md
@@ -9,3 +9,7 @@ external_manifest_url:
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<hr>
+<h3>Preferred Citation:</h3>
+<i>Furious Flower Poetry Center Overview Part 1, 6/20/2011 (FF010)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF010. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/488.![image](https://user-images.githubusercontent.com/92408618/146683737-5a2e689d-8fd6-4c1a-b4c1-160e26ad663e.png)
+
