--- a/pages/ff031.md
+++ b/pages/ff031.md
@@ -10,3 +10,5 @@ external_manifest_url:
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
 <hr>
+<h3>Preferred Citation:</h3>
+<i>African American Poetry and the Vernacular Matrix Part 3, 9/29/1994 (FF031)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the first Furious Flower Poetry Center decennial meeting, September 29-October 1, 1994. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF031. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
