--- a/pages/ff031.md
+++ b/pages/ff031.md
@@ -12,3 +12,6 @@ using HTML or markdown.  Do not modify this file above this line -->
 <hr>
 <h3>Preferred Citation:</h3>
 <i>African American Poetry and the Vernacular Matrix Part 3, 9/29/1994 (FF031)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the first Furious Flower Poetry Center decennial meeting, September 29-October 1, 1994. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF031. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
+<hr>
+<h3>Browser Directions:</h3> 
+Audio playback is activated by the timestamped annotation section you click in. Search field will find any word or phrase in the Transcription, Speaker or Environment annotation layers. Annotation layers can be ordered by Time (default), Annotation contents or Annotation layer labels by selecting the up/down arrows on the right.
