--- a/pages/ff137.md
+++ b/pages/ff137.md
@@ -9,6 +9,7 @@ external_manifest_url:
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<hr>
 <p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/04/sharanstrange4.jpg"></p>
 <h1 style="text-align:center">Sharan Strange</h1>
 <p>Sharan Strange is a poet, essayist, teacher, and theorist. In interviews she has emphasized how the political climate affects her experience of everyday life. Especially in these times, she feels a sense of responsibility to communicate truth, in opposition to the propaganda of false national and historical narratives. In her essay <i>A Poetics of Empathy</i>, she says: ”in the context of African American poetry from past to future, a poetics of empathy corresponds to a poetics of resistance that confronts apathy and assault with the prerogative, practice, and pressure of humanity.”<a href="#fn1"><sup>[1]</sup></a> Her poetry reflects this philosophy.</p>
@@ -43,4 +44,6 @@ using HTML or markdown.  Do not modify this file above this line -->
 <h3>Preferred Citation:</h3>
   <i>Sharan Strange Interview, 09/25/2004 (FF0137)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF137. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
 <hr>
+<h3>Browser Directions:</h3> 
+Audio playback is activated by the timestamped annotation section you click in. Search field will find any word or phrase in the Transcription, Speaker or Environment annotation layers. Annotation layers can be ordered by Time (default), Annotation contents or Annotation layer labels by selecting the up/down arrows on the right.
 
