--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -44,7 +44,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p><a name="fn6">[6]</a>: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” <i>The Southern Literary Journal</i> 43, no. 2 (2011): 1–11.</p>
 <hr>
 <h3>Preferred Citation:</h3>
-<i>Brenda Marie Osbey Interview, 9/24/2004 (FF0148)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
+<i>Brenda Marie Osbey Interview, 9/24/2004 (FF0148)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
 <hr>
 <h3>Browser Directions:</h3> 
 Audio playback is activated by the timestamped annotation section you click in. Search field will find any word or phrase in the Transcription, Speaker or Environment annotation layers. Annotation layers can be ordered by Time (default), Annotation contents or Annotation layer labels by selecting the up/down arrows on the right.  
