--- a/_manifests/ff031.md
+++ b/_manifests/ff031.md
@@ -1,6 +1,6 @@
 ---
 layout: manifest
-title: FF031
+title: African American Poetry and the Vernacular Matrix Part 3, 9/29/1994 (FF031)
 manifest_name: ff031
 
 ---
