--- a/_manifests/ff010.md
+++ b/_manifests/ff010.md
@@ -1,6 +1,6 @@
 ---
 layout: manifest
-title: FF010
+title: Furious Flower Poetry Center Overview Part 1, 6/20/2011 (FF010)
 manifest_name: ff010
 
 ---
