--- a/pages/ff152.md
+++ b/pages/ff152.md
@@ -10,6 +10,33 @@ external_manifest_url:
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
 <hr>
+<p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/03/elizabeth-alexander3.jpg"></p>
+<h1 style="text-align:center">Elizabeth Alexander</h1>
+<p>Elizabeth Alexander is a renowned poet, essayist, educator, feminist, and cultural advocate. She has published several books of poetry, including <i>The Venus Hottentot</i>, <i>Body of Life</i>, and <i>American Sublime</i>, which was a finalist for the Pulitzer prize in 2005. Dr. Alexander read “Praise Song for the Day” at the inauguration of President Barack Obama in 2009. Her memoir, <i>The Light of the World</i>, was a finalist for the Pulitzer prize in 2015. She has taught at Columbia University and Yale University, and currently serves as the President of the Andrew W. Mellon Foundation.</p>
+     <p>In works such as <i>The Venus Hottentot</i>, she recovers the undertold histories and lost voices of the past, and delves into the gaps and silences of the archive. As she notes in <i>The Black Interior</i>, “The historian laments caesuras in the historical record; the artist can offer deeply informed imagining that, while not empirically verifiable, offers one of the only routes we may have to imagine a past whose records have not been kept precious.”<a href="#fn1"><sup>[1]</sup></a> She also explores the ways dream logic and illogic can manifest itself in poems in her collection, <i>Antebellum Dream Book</i>. The forms of her poems range from sonnets, to historical counter-narratives, to epic poems such as <i>Amistad</i>.</p>
+<p>In her essay collections, such as <i>The Black Interior</i>, the powerful economy of her language combines with her vivid imagery. Within these works Dr. Alexander often juxtaposes literature and popular culture, adopting a nuanced and inspired position on their interaction.</p>
+<p>Dr. Alexander has been influenced by Rita Dove, Elizabeth Bishop, and Gwendolyn Brooks, among many others.</p>
+<hr>
+<p>In this interview, Meta DuEwa Jones interviews Elizabeth Alexander, touching on the themes of myth, history, colonialism, and visuality in her work. She also discusses her need for strong self-advocacy when dealing with publishing presses, the aesthetic and ideological motives behind her book covers, and her process and philosophy for writing.</p>
+<p>Dr. Meta DuEwa Jones is a professor at UNC Chapel Hill, and a prolific theorist. She received her Ph.D. from Stanford in 2001. She has had papers published in <i>MELUS</i>, <i>Callaloo</i>, and <i>ELH</i>, among other journals. She has been included in several essay collections, and has published a book, <i>The Muse is Music</i>. Her scholarship often works at the intersection of African American literature, music, and visual art.</p>
+<hr>
+<h3>More Information:</h3>
+<b>Interviews:</b>
+<ul><li><p><a href=https://www.jstor.org/stable/j.ctt46nh3m.12>Interview</a> with Malin Pereira. Touches on most of Alexander's poetry collections, several themes in her work, her sense of craft, and influences.</p></li></ul>
+<ul><li><p><a href=https://www.npr.org/transcripts/400179330>Interview</a> with Rachel Martin. Provides background and context for Alexander's memoir, <i>The Light of the World</i>. Audio file included.</p></li></ul>
+<ul><li><p><a href=https://www.kunhardtfilmfoundation.org/featured-interviews/elizabeth-alexander2>Interview</a> with Peter Kunhardt. Discusses various aspects of her friendship and solidarity with Barack Obama, growing up in the Civil Rights Era, and the political climate in the U.S.</p></li></ul>
+<b>Poems:</b>
+<ul><li><p><a href=https://furiousflower.org/elizabeth-alexander>Furious Flower Archive</a>: Contains short biography, and two annotated poems with videos of Alexander reading.</p></li></ul>
+<ul><li><p><a href=https://www.poetryfoundation.org/poets/elizabeth-alexander>Selected Poems</a>: Contains an excellent introductory essay, with short descriptions of Alexander’s publications to date, and links to several of Alexander’s poems.</p></li></ul>
+<ul><li><p><a href=https://poets.org/poet/elizabeth-alexander>Selected Poems</a>:Provides a selected list of poems from across Dr. Alexander’s body of work.</p></li></ul>
+<b>Essays:</b>
+<ul><li><p><a href=https://www.jstor.org/stable/10.7312/asme19803.17>"The Trayvon Generation"</a>: Alexander protests police brutality and its effect on the new generation. She also muses on the beauty and depth of the TV shows and music videos that provide forms of resistance and critique. This essay won the National Magazine Award for Essays and Criticism.</p></li></ul>
+<ul><li><p><a href=https://www.jstor.org/stable/40027074>"Dunbar Lives!"</a>: Explores the impact and pervasive influence of Paul Lawrence Dunbar on multiple generations of poets.</p></li></ul>
+<b>Other:</b>
+<ul><li><p><a href=http://www.elizabethalexander.net>Elizabeth Alexander's</a> professional website.</p></li></ul>
+<hr>
+<p><a name="fn1">[1]</a>:Alexander, Elizabeth. <i>The Black Interior</i>. St. Paul, Minnesota: Graywolf Press, 2004.</p>
+
 <h3>Preferred Citation:</h3>
 <i>Elizabeth Alexander Interview, 9/23/2004 (FF152)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF152. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
 <hr>
