--- a/pages/ff152.md
+++ b/pages/ff152.md
@@ -12,13 +12,13 @@ using HTML or markdown.  Do not modify this file above this line -->
 <hr>
 <p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/03/elizabeth-alexander3.jpg"></p>
 <h1 style="text-align:center">Elizabeth Alexander</h1>
-<p>Elizabeth Alexander is a renowned poet, essayist, educator, feminist, and cultural advocate. She has published several books of poetry, including <i>The Venus Hottentot</i>, <i>Body of Life</i>, and <i>American Sublime</i>, which was a finalist for the Pulitzer prize in 2005. Dr. Alexander read “Praise Song for the Day” at the inauguration of President Barack Obama in 2009. Her memoir, <i>The Light of the World</i>, was a finalist for the Pulitzer prize in 2015. She has taught at Columbia University and Yale University, and currently serves as the President of the Andrew W. Mellon Foundation.</p>
-     <p>In works such as <i>The Venus Hottentot</i>, she recovers the undertold histories and lost voices of the past, and delves into the gaps and silences of the archive. As she notes in <i>The Black Interior</i>, “The historian laments caesuras in the historical record; the artist can offer deeply informed imagining that, while not empirically verifiable, offers one of the only routes we may have to imagine a past whose records have not been kept precious.”<a href="#fn1"><sup>[1]</sup></a> She also explores the ways dream logic and illogic can manifest itself in poems in her collection, <i>Antebellum Dream Book</i>. The forms of her poems range from sonnets, to historical counter-narratives, to epic poems such as <i>Amistad</i>.</p>
+<p>Elizabeth Alexander is a renowned poet, essayist, educator, feminist, and cultural advocate. She has published several books of poetry, including <i>The Venus Hottentot</i>, <i>Body of Life</i>, and <i>American Sublime</i>, which was a finalist for the Pulitzer prize in 2005. Dr. Alexander read “Praise Song for the Day” at the inauguration of President Barack Obama in 2009. Her memoir, <i>The Light of the World</i>, was a finalist for the Pulitzer prize in 2015. She has taught at Columbia University and Yale University, and currently serves as the President of the Andrew W. Mellon Foundation. Her poetry covers a wide range of themes, including meditations on popular culture, deep explorations of personal experience, reconstructions of dream sequences, and historical reclaimations.</p>
+<p>In works such as <i>The Venus Hottentot</i>, she recovers the undertold histories and lost voices of the past, and delves into the gaps and silences of the archive. As she notes in <i>The Black Interior</i>, “The historian laments caesuras in the historical record; the artist can offer deeply informed imagining that, while not empirically verifiable, offers one of the only routes we may have to imagine a past whose records have not been kept precious.”<a href="#fn1"><sup>[1]</sup></a> She also explores the ways dream logic and illogic can manifest itself in poems in her collection, <i>Antebellum Dream Book</i>. The forms of her poems range from sonnets, to historical counter-narratives, to epic poems such as <i>Amistad</i>.</p>
 <p>In her essay collections, such as <i>The Black Interior</i>, the powerful economy of her language combines with her vivid imagery. Within these works Dr. Alexander often juxtaposes literature and popular culture, adopting a nuanced and inspired position on their interaction.</p>
 <p>Dr. Alexander has been influenced by Rita Dove, Elizabeth Bishop, and Gwendolyn Brooks, among many others.</p>
 <hr>
 <p>In this interview, Meta DuEwa Jones interviews Elizabeth Alexander, touching on the themes of myth, history, colonialism, and visuality in her work. She also discusses her need for strong self-advocacy when dealing with publishing presses, the aesthetic and ideological motives behind her book covers, and her process and philosophy for writing.</p>
-<p>Dr. Meta DuEwa Jones is a professor at UNC Chapel Hill, and a prolific theorist. She received her Ph.D. from Stanford in 2001. She has had papers published in <i>MELUS</i>, <i>Callaloo</i>, and <i>ELH</i>, among other journals. She has been included in several essay collections, and has published a book, <i>The Muse is Music</i>. Her scholarship often works at the intersection of African American literature, music, and visual art.</p>
+<p><a href=https://englishcomplit.unc.edu/faculty-directory/meta-duewa-jones>Dr. Meta DuEwa Jones</a> is a professor at UNC Chapel Hill, and a prolific theorist. She received her Ph.D. from Stanford in 2001. She has had papers published in <i>MELUS</i>, <i>Callaloo</i>, and <i>ELH</i>, among other journals. She has been included in several essay collections, and has published a book, <i>The Muse is Music</i>. Her scholarship often works at the intersection of African American literature, music, and visual art.</p>
 <hr>
 <h3>More Information:</h3>
 <b>Interviews:</b>
