--- a/pages/ff152.md
+++ b/pages/ff152.md
@@ -18,22 +18,22 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>Dr. Alexander has been influenced by Rita Dove, Elizabeth Bishop, and Gwendolyn Brooks, among many others.</p>
 <hr>
 <p>In this interview, Meta DuEwa Jones interviews Elizabeth Alexander, touching on the themes of myth, history, colonialism, and visuality in her work. She also discusses her need for strong self-advocacy when dealing with publishing presses, the aesthetic and ideological motives behind her book covers, and her process and philosophy for writing.</p>
-<p><a href=https://englishcomplit.unc.edu/faculty-directory/meta-duewa-jones> Dr. Meta DuEwa Jones</a> is a professor at UNC Chapel Hill, and a prolific theorist. She received her Ph.D. from Stanford in 2001. She has had papers published in <i>MELUS</i>, <i>Callaloo</i>, and <i>ELH</i>, among other journals. She has been included in several essay collections, and has published a book, <i>The Muse is Music</i>. Her scholarship often works at the intersection of African American literature, music, and visual art.</p>
+<p><a href="https://englishcomplit.unc.edu/faculty-directory/meta-duewa-jones"> Dr. Meta DuEwa Jones</a> is a professor at UNC Chapel Hill, and a prolific theorist. She received her Ph.D. from Stanford in 2001. She has had papers published in <i>MELUS</i>, <i>Callaloo</i>, and <i>ELH</i>, among other journals. She has been included in several essay collections, and has published a book, <i>The Muse is Music</i>. Her scholarship often works at the intersection of African American literature, music, and visual art.</p>
 <hr>
 <h3>More Information:</h3>
 <b>Interviews:</b>
-<ul><li><p><a href=https://www.jstor.org/stable/j.ctt46nh3m.12>Interview</a> with Malin Pereira. Touches on most of Alexander's poetry collections, several themes in her work, her sense of craft, and influences.</p></li></ul>
-<ul><li><p><a href=https://www.npr.org/transcripts/400179330>Interview</a> with Rachel Martin. Provides background and context for Alexander's memoir, <i>The Light of the World</i>. Audio file included.</p></li></ul>
-<ul><li><p><a href=https://www.kunhardtfilmfoundation.org/featured-interviews/elizabeth-alexander2>Interview</a> with Peter Kunhardt. Discusses various aspects of her friendship and solidarity with Barack Obama, growing up in the Civil Rights Era, and the political climate in the U.S.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/j.ctt46nh3m.12">Interview</a> with Malin Pereira. Touches on most of Alexander's poetry collections, several themes in her work, her sense of craft, and influences.</p></li></ul>
+<ul><li><p><a href="https://www.npr.org/transcripts/400179330">Interview</a> with Rachel Martin. Provides background and context for Alexander's memoir, <i>The Light of the World</i>. Audio file included.</p></li></ul>
+<ul><li><p><a href="https://www.kunhardtfilmfoundation.org/featured-interviews/elizabeth-alexander2">Interview</a> with Peter Kunhardt. Discusses various aspects of her friendship and solidarity with Barack Obama, growing up in the Civil Rights Era, and the political climate in the U.S.</p></li></ul>
 <b>Poems:</b>
-<ul><li><p><a href=https://furiousflower.org/elizabeth-alexander>Furious Flower Archive</a>: Contains short biography, and two annotated poems with videos of Alexander reading.</p></li></ul>
-<ul><li><p><a href=https://www.poetryfoundation.org/poets/elizabeth-alexander>Selected Poems</a>: Contains an excellent introductory essay, with short descriptions of Alexander’s publications to date, and links to several of Alexander’s poems.</p></li></ul>
-<ul><li><p><a href=https://poets.org/poet/elizabeth-alexander>Selected Poems</a>: Provides a selected list of poems from across Dr. Alexander’s body of work.</p></li></ul>
+<ul><li><p><a href="https://furiousflower.org/elizabeth-alexander">Furious Flower Archive</a>: Contains short biography, and two annotated poems with videos of Alexander reading.</p></li></ul>
+<ul><li><p><a href="https://www.poetryfoundation.org/poets/elizabeth-alexander">Selected Poems</a>: Contains an excellent introductory essay, with short descriptions of Alexander’s publications to date, and links to several of Alexander’s poems.</p></li></ul>
+<ul><li><p><a href="https://poets.org/poet/elizabeth-alexander">Selected Poems</a>: Provides a selected list of poems from across Dr. Alexander’s body of work.</p></li></ul>
 <b>Essays:</b>
-<ul><li><p><a href=https://www.jstor.org/stable/10.7312/asme19803.17>"The Trayvon Generation"</a>: Alexander protests police brutality and its effect on the new generation. She also muses on the beauty and depth of the TV shows and music videos that provide forms of resistance and critique. This essay won the National Magazine Award for Essays and Criticism.</p></li></ul>
-<ul><li><p><a href=https://www.jstor.org/stable/40027074>"Dunbar Lives!"</a>: Explores the impact and pervasive influence of Paul Lawrence Dunbar on multiple generations of poets.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/10.7312/asme19803.17">"The Trayvon Generation"</a>: Alexander protests police brutality and its effect on the new generation. She also muses on the beauty and depth of the TV shows and music videos that provide forms of resistance and critique. This essay won the National Magazine Award for Essays and Criticism.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/40027074">"Dunbar Lives!"</a>: Explores the impact and pervasive influence of Paul Lawrence Dunbar on multiple generations of poets.</p></li></ul>
 <b>Other:</b>
-<ul><li><p><a href=http://www.elizabethalexander.net>Elizabeth Alexander's</a> professional website.</p></li></ul>
+<ul><li><p><a href="http://www.elizabethalexander.net">Elizabeth Alexander's</a> professional website.</p></li></ul>
 <hr>
 <p><a name="fn1">[1]</a>:Alexander, Elizabeth. <i>The Black Interior</i>. St. Paul, Minnesota: Graywolf Press, 2004.</p>
 
