--- a/pages/ff152.md
+++ b/pages/ff152.md
@@ -16,7 +16,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>In works such as <i>The Venus Hottentot</i>, she recovers the undertold histories and silenced voices of the past, and delves into the gaps and silences of the archive. As she notes in <i>The Black Interior</i>, “The historian laments caesuras in the historical record; the artist can offer deeply informed imagining that, while not empirically verifiable, offers one of the only routes we may have to imagine a past whose records have not been kept precious.”<a href="#fn1"><sup>[1]</sup></a> 
   <p>In her collection, <i>Antebellum Dream Book</i>, as Dr. Alexander notes, she explores how "Race, gender, class, sexuality– our social identities– exist and have been 'always already' constructed in the dream space... Yet social identity, in unfettered dream space, need not be seen as a constraint but rather as a way of imagining the racial self unfettered, racialized but not delimited."<a href="#fn2"><sup>[2]</sup></a> The forms of her poems range from sonnets, to surrealist free verse, to counter-narrative epics such as "Amistad".</p>
 <p>In her essay collection, <i>The Black Interior</i>, the powerful economy of her language combines with her vivid imagery to explore an "inner space in which black artists have found selves that go far, far beyond the limited expectations and definitions of what black is, isn't, or should be."<a href="#fn3"><sup>[3]</sup></a> Within these works Dr. Alexander often juxtaposes African American literature and popular culture, adopting a nuanced and inspired position on their interaction.</p>
-<p>Dr. Alexander has been influenced by Rita Dove, Elizabeth Bishop, and Gwendolyn Brooks, and has deeply influenced many poets herself.</p>
+<p>Dr. Alexander has been influenced by Rita Dove, Elizabeth Bishop, and Gwendolyn Brooks, and has deeply influenced many poets in turn.</p>
 <hr>
 <p>In this interview, Meta DuEwa Jones interviews Elizabeth Alexander, touching on the themes of myth, history, colonialism, and visuality in her work. She also discusses her need for strong self-advocacy when dealing with publishing presses, the aesthetic and ideological motives behind her book covers, and her process and philosophy for writing.</p>
 <p><a href="https://englishcomplit.unc.edu/faculty-directory/meta-duewa-jones"> Dr. Meta DuEwa Jones</a> is a professor at UNC Chapel Hill, and a prolific theorist. She received her Ph.D. from Stanford in 2001. She has had papers published in <i>MELUS</i>, <i>Callaloo</i>, and <i>ELH</i>, among other journals. She has been included in several essay collections, and has published a book, <i>The Muse is Music</i>. Her scholarship often works at the intersection of African American literature, music, and visual art.</p>
@@ -40,7 +40,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p><a name="fn2">[2]</a>:Ibid, 5.</p>
 <p><a name="fn3">[3]</a>:Ibid, 5.</p>
 <h3>Preferred Citation:</h3>
-<i>Elizabeth Alexander Interview, 9/23/2004 (FF152)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF152. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
+<i>Elizabeth Alexander Interview, 9/23/2004 (FF152)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF152. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487.
 <hr>
 <h3>Browser Directions:</h3> 
 Audio playback is activated by the timestamped annotation section you click in. Search field will find any word or phrase in the Transcription, Speaker or Environment annotation layers. Annotation layers can be ordered by Time (default), Annotation contents or Annotation layer labels by selecting the up/down arrows on the right. Speaker and Transcription layers are matching color-coded to facilitate reading.
