--- a/pages/ff152.md
+++ b/pages/ff152.md
@@ -12,8 +12,8 @@ using HTML or markdown.  Do not modify this file above this line -->
 <hr>
 <p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/03/elizabeth-alexander3.jpg"></p>
 <h1 style="text-align:center">Elizabeth Alexander</h1>
-<p>Elizabeth Alexander is a renowned poet, essayist, educator, feminist, and cultural advocate. She has published several books of poetry, including <i>The Venus Hottentot</i>, <i>Body of Life</i>, and <i>American Sublime</i>, which was a finalist for the Pulitzer prize in 2005. Dr. Alexander read “Praise Song for the Day” at the inauguration of President Barack Obama in 2009. Her memoir, <i>The Light of the World</i>, was a finalist for the Pulitzer prize in 2015. She has taught at Columbia University and Yale University, and currently serves as the President of the Andrew W. Mellon Foundation. Her poetry covers a wide range of themes, including meditations on popular culture, deep explorations of personal experience, reconstructions of dream sequences, and historical reclaimations.</p>
-<p>In works such as <i>The Venus Hottentot</i>, she recovers the undertold histories and silenced voices of the past, and delves into the gaps and silences of the archive. As she notes in <i>The Black Interior</i>, “The historian laments caesuras in the historical record; the artist can offer deeply informed imagining that, while not empirically verifiable, offers one of the only routes we may have to imagine a past whose records have not been kept precious.”<a href="#fn1"><sup>[1]</sup></a> 
+<p>Elizabeth Alexander is a renowned poet, essayist, educator, feminist, and cultural advocate. She has published several books of poetry, including <i>The Venus Hottentot</i>, <i>Body of Life</i>, and <i>American Sublime</i>, which was a finalist for the Pulitzer prize in 2005. Dr. Alexander read “Praise Song for the Day” at the inauguration of President Barack Obama in 2009. Her memoir, <i>The Light of the World</i>, was a finalist for the Pulitzer prize in 2015. She has taught at Columbia and Yale University, and currently serves as the President of the Andrew W. Mellon Foundation. Her poetry covers a wide range of themes, including meditations on popular culture, deep explorations of personal experience, reconstructions of dream sequences, and historical reclaimations.</p>
+<p>In works such as <i>The Venus Hottentot</i>, she recovers the undertold histories and silenced voices of the past, and delves into the gaps and silences of the archive. As she notes, “The historian laments caesuras in the historical record; the artist can offer deeply informed imagining that, while not empirically verifiable, offers one of the only routes we may have to imagine a past whose records have not been kept precious.”<a href="#fn1"><sup>[1]</sup></a> 
   <p>In her collection, <i>Antebellum Dream Book</i>, as Dr. Alexander notes, she explores how "Race, gender, class, sexuality– our social identities– exist and have been 'always already' constructed in the dream space... Yet social identity, in unfettered dream space, need not be seen as a constraint but rather as a way of imagining the racial self unfettered, racialized but not delimited."<a href="#fn2"><sup>[2]</sup></a> The forms of her poems range from sonnets, to surrealist free verse, to counter-narrative epics such as "Amistad".</p>
 <p>In her essay collection, <i>The Black Interior</i>, the powerful economy of her language combines with her vivid imagery to explore an "inner space in which black artists have found selves that go far, far beyond the limited expectations and definitions of what black is, isn't, or should be."<a href="#fn3"><sup>[3]</sup></a> Within these works Dr. Alexander often juxtaposes African American literature and popular culture, adopting a nuanced and inspired position on their interaction.</p>
 <p>Dr. Alexander has been influenced by Rita Dove, Elizabeth Bishop, and Gwendolyn Brooks, among others. In her role as an instructor and mentor in universities and the <a href="https://cavecanempoets.org/">Cave Canem Foundation</a>, and in her role as poet and storyteller, she has deeply influenced many poets in turn.</p>
@@ -26,6 +26,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://www.jstor.org/stable/j.ctt46nh3m.12">Interview</a> with Malin Pereira. Touches on most of Alexander's poetry collections, several themes in her work, her sense of craft, and influences.</p></li></ul>
 <ul><li><p><a href="https://www.npr.org/transcripts/400179330">Interview</a> with Rachel Martin. Provides background and context for Alexander's memoir, <i>The Light of the World</i>. Audio file included.</p></li></ul>
 <ul><li><p><a href="https://www.kunhardtfilmfoundation.org/featured-interviews/elizabeth-alexander2">Interview</a> with Peter Kunhardt. Discusses various aspects of her friendship and solidarity with Barack Obama, growing up in the Civil Rights Era, and the political climate in the U.S.</p></li></ul>
+<ul><li><p><a href="https://southernspaces.org/2009/natasha-trethewey-interviews-elizabeth-alexander">Interview</a> with Natasha Trethewey. Alexander reads several poems, and discusses them. Links to video included.</p></li></ul>
 <b>Poems:</b>
 <ul><li><p><a href="https://furiousflower.org/elizabeth-alexander">Furious Flower Archive</a>: Contains a short biography, and two annotated poems with videos of Alexander reading.</p></li></ul>
 <ul><li><p><a href="https://www.poetryfoundation.org/poets/elizabeth-alexander">Selected Poems</a>: Contains an introductory essay, with short descriptions of Alexander’s publications to date, and links to several of Alexander’s poems.</p></li></ul>
