--- a/pages/ff143.md
+++ b/pages/ff143.md
@@ -12,7 +12,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <hr>
 <p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/03/sonia-sanchez3.jpg"></p>
 <h1 style="text-align:center">Sonia Sanchez</h1>
-<p>Sonia Sanchez is a poet, playwright, educator, storyteller, womanist, and revolutionary. She has a voice that bridges generations. She was instrumental in the Black Arts Movement of the ‘60s and ‘70s, and has continued to publish impactful, widely influential works of poetry ever since. She has visited hundreds of colleges and universities to teach and spread her poetry and philosophy, and traveled to many countries to read with the same mission. As she notes, ”above all what we do is try to keep us human.”<a href="#fn1"><sup>[1]</sup></a></p>
+<p>Sonia Sanchez is a poet, playwright, educator, storyteller, womanist, and revolutionary. She has a voice that bridges generations. She was instrumental in the Black Arts Movement of the ‘60s and ‘70s, and has continued to publish impactful, widely influential works of poetry ever since. She has visited hundreds of colleges and universities to teach and spread her poetry and philosophy, and traveled to many countries to read with the same mission. As she notes concerning a poet's role, ”above all what we do is try to keep us human.”<a href="#fn1"><sup>[1]</sup></a></p>
 <p>In her long and prolific career, Sanchez has reforged poetic forms such as the haiku and tanka to better fit her calls of and for radical love. She has bridged the gap between personal and political art forms, blurring the line between self-discovery, political activism, and spiritual teaching. Dr. Joanne Gabbin has referred to Sonia Sanchez’s message as “one of redeeming realism” and “gemlike intensity”.<a href="#fn2"><sup>[2]</sup></a></p>
 <p>Sanchez’s groundbreaking application of jazz improvisation techniques and everyday language in her collection <i>We a BaddDDD People</i> opened new possibilities of musical and linguistic fusion in spoken word poetry and rap. In her revolutionary womanism, Sanchez also explores the many varied connections and disconnections between love and sexuality. She lets the joy of their union and the pain of their disjunction show through the experimental forms in collections such as <i>I’ve Been a Woman</i> and <i>Homegirls and Handgrenades</i>.</p>
 <p>Among the many honors she has received are <i>The Lucretia Mott Award</i>, <i>The Langston Hughes Poetry Award</i>, <i>The Leeway Foundation Transformational Award</i>, to note only a few. Most recently, she has won the $250,000 Gish Prize for pushing the boundaries of poetic form, and for her contributions to social change.</p>
