--- a/pages/ff143.md
+++ b/pages/ff143.md
@@ -24,6 +24,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://www.jstor.org/stable/26446152">Interview</a>  with Susan Kelly. Sonya discusses the literary culture of Harlem in the ‘60s, her involvement with the Nation of Islam, how she conducted the first college course on African American Women’s Literature, and what it took to resist and combat the attempts to erase the historical events, Black poetry, literature, and political philosophy in the ‘60s, ‘70s, and beyond.</p></li></ul>
 <ul><li><p><a href="https://bostonreview.net/articles/sonia-sanchez-christina-knight-straight-down-bones">Interview</a> with Christina Knight. Discuss Sanchez’s ancestral influences, Sanchez confronting racism in academia, the job market, and the libraries in her time as a student.</p></li></ul>
 <ul><li><p><a href="https://www.jstor.org/stable/40545827">Interview</a> with India Dennis-Mahmood. Sanchez and Dennis-Mahmood touch on the history of these feminisms, the struggles and influence of Black students on predominantly white campuses, and how modernism isn’t honest about its origins in the art of the African Diaspora.</p></li></ul>
+<ul><li><p><a href="https://vimeo.com/409889566">Interview</a> video, with Major Jackson. Touches on Sanchez's childhood, her writing process, her acquaintance by Amiri Baraka, and the love of teaching.</p></li></ul>
 <b>Essays:</b>
 <ul><li><p><a href="https://www.jstor.org/stable/41067138">”The Poet as a Creator of Social Values”</a>: Essay written by Sanchez in the ‘80s. She discusses the history of poetic language from its early forms to its racist distortion by white settlers, to the resistance and reclamation poets in the African Diaspora have effected.</p></li></ul>  
 <ul><li><p><a href="https://www.jstor.org/stable/j.ctt130hrvp.8">”Sonia Sanchez: The Will and the Spirit”</a>: Essay on Sanchez’s work, and an interview with D.H. Melhem covering Sanchez’s childhood practice of poetry writing, her musical influences, and the performance of poems.</p></li></ul>
