--- a/pages/ff143.md
+++ b/pages/ff143.md
@@ -21,7 +21,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <hr>
 <h3>More information:</h3>
 <b>Interviews:</b>
-<ul><li><p><a href="https://www.jstor.org/stable/26446152">Interview</a>  with Susan Kelly. Sonya discusses the literary culture of Harlem in the ‘60s, her involvement with the Nation of Islam, how she conducted the first college course on African American Women’s Literature, and what it took to resist and combat attempts to erase the historical events, Black poetry, literature, and political philosophy in the ‘60s, ‘70s, and beyond.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/26446152">Interview</a>  with Susan Kelly. Sonya discusses the literary culture of Harlem in the ‘60s, her involvement with the Nation of Islam, how she conducted the first college course on African American Women’s Literature, and what it took to resist and combat attempts to erase the historical events, Black poetry, literature, and political philosophy of the ‘60s, ‘70s, and beyond.</p></li></ul>
 <ul><li><p><a href="https://bostonreview.net/articles/sonia-sanchez-christina-knight-straight-down-bones">Interview</a> with Christina Knight. Discuss Sanchez’s ancestral influences, Sanchez confronting racism in academia, the job market, and the libraries in her time as a student.</p></li></ul>
 <ul><li><p><a href="https://www.jstor.org/stable/40545827">Interview</a> with India Dennis-Mahmood. Sanchez and Dennis-Mahmood touch on the history of these feminisms, the struggles and influence of Black students on predominantly white campuses, and how modernism isn’t honest about its origins in the art of the African Diaspora.</p></li></ul>
 <ul><li><p><a href="https://vimeo.com/409889566">Interview</a> video, with Major Jackson. Touches on Sanchez's childhood, her writing process, her acquaintance by Amiri Baraka, and the love of teaching.</p></li></ul>
