--- a/pages/ff031.md
+++ b/pages/ff031.md
@@ -10,6 +10,36 @@ external_manifest_url:
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
 <hr>
+<p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/04/rita.jpg"></p>
+<h1 style="text-align:center">Rita Dove</h1>
+<hr>
+<p> Rita Dove is a writer, poet, educator, musician, and public figure. Among her published works are <i>Thomas and Beulah</i>, for which she was awarded the Pulitzer Prize, <i>American Smooth</i>, and her most recent collection, <i>Playlist for the Apocalypse</i>. She has won numerous awards and honors, and served as the U.S. Poet Laureate from 1993 to 1995. She has been teaching at the University of Virginia since 1989. Her collections of poetry reflect her many passions, including languages, ballroom dancing, history, and music. 
+<p>Many of her poems gather historical accounts and details, weaving them into multi-vocal stories that provide new and inspired perspectives. As Kevin Stein notes, in her poetry collections "history is figured as a continuum of ostensibly discrete and quiescent events that, in actuality, shudder against each other, thus quaking the solid ground of our present moment".<a href="#fn1"><sup>[1]</sup></a></p>
+In her collection <i>Thomas and Beulah</i>, Dove explores the intersection between the history of a place and her family story. Building up poetic details, she weaves her poems into a rich historical atmosphere, and explores the complex of human lives existing there. In collections like <i>American Smooth</i>, she considers everything from the significance and rhythms of dance, to the memorialization of war, to what it would be like to be a bullet. In addition to her numerous poetry collections, Dove has written lyrics in collaboration with musicians such as Alvin Singleton and John Williams, written a play, and multiple novels.</p>
+<hr>
+<p><a href="https://camilledungy.com/bio">Camille T. Dungy</a> is a poet and essayist who earned a BA from Stanford University, and an MFA from the University of North Carolina at Greensboro. She won the Colorado Book Award for her collection <i>Trophic Cascade</i>, and was awarded a Guggenheim Fellowship in 2019. Her most recent publication, and her first published book of prose, is <i>Guidebook to Relative Strangers: Journeys into Race, Motherhood, and History</i>.</p>
+<p>In this interview, Rita Dove and Camille Dungy discuss racism and segregation in the American military of WWI, how Dove works at the intersection of personal and official history, the directions that the younger generation of Black American poets are going in, and one of Dove’s most well-known poems, <i>Meditation at Fifty Yards, Moving Target</i>.</p>
+<hr>
+<h3>More Information</h3>
+<b>Interviews:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/1208910
+">Interview</a> with Malin Pereira. Dove discusses her poetic structure, form, and rhythm in musical terms, her fascination with languages. She also discusses the artistic choices and considerations that went into several of her works.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/26447141
+">Interview</a> with Claire Schwartz. Discuss Dove’s philosophy of history, the difficulty and nuances of translation, and the way German has influenced her poetic form.</p></li></ul>
+<b>Essays:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/27654893
+">"The Fire This Time"</a>: Tells the story of Rita Dove’s house being struck by lightning – one of the inspirations for her collection of poems <i>American Smooth</i>.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/40375707
+">"Telling it like it I-S ‘IS’: Narrative Techniques in Melvin Tolson’s ‘Harlem Gallery’"</a>: An essay written by Dove in the ‘90s, which provides critical context from the time of its publication during the Black Arts Movement, and a short analysis.</p></li></ul>
+<b>Poems:</b>
+<ul><li><p><a href="https://furiousflower.org/rita-dove/">Furious Flower Archives</a> website providing videos of Dove reading select poems, and annotations providing context.</p></li></ul>
+<ul><li><p><a href="https://www.poetryfoundation.org/poets/rita-dove">Selection</a> of poems. Resource also includes bibliography of Dove’s works, lyrics, and publications in periodical journals.</p></li></ul>
+<ul><li><p><a href="https://poets.org/poet/rita-dove">Selection</a> of poetry containing works from across Dove’s literary career.</p></li></ul>
+<b>Other:</b>
+<ul><li><p><a href="https://achievement.org/achiever/rita-dove">Academy of Achievement</a> page, including an interview and a biography including pictures.</p></li></ul>
+<ul><li><p><a href="https://youtu.be/mao8itrJafI">Documentary</a> on Rita Dove, directed by Eduardo Montes-Bradley. Focuses on Dove’s childhood, her family history, her love of music, and her writing process.</p></li></ul>
+<hr>
+<p><a name="fn1">[1]</a>:Stein, Kevin. "Lives in Motion: Multiple Perspectives in Rita Dove’s Poetry." Mississippi Review 23, no. 3 (1995): 51–79.</p>
 <h3>Preferred Citation:</h3>
 <i>African American Poetry and the Vernacular Matrix Part 3, 9/29/1994 (FF031)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the first Furious Flower Poetry Center decennial meeting, September 29-October 1, 1994. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF031. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
 <hr>
