--- a/pages/ff019.md
+++ b/pages/ff019.md
@@ -23,14 +23,14 @@ In her collection <i>Thomas and Beulah</i>, Dove explores the intersection betwe
 <h3>More Information</h3>
 <b>Interviews:</b>
 <ul><li><p><a href="https://www.jstor.org/stable/1208910
-">Interview</a> with Malin Pereira. Dove discusses her poetic structure, form, and rhythm in musical terms, her fascination with languages. She also discusses the artistic choices and considerations that went into several of her works.</p></li></ul>
+">Interview</a> with Malin Pereira. Dove discusses her poetic structure, form, and rhythm in musical terms, and her fascination with languages. She also discusses the artistic choices and considerations that went into several of her works.</p></li></ul>
 <ul><li><p><a href="https://www.jstor.org/stable/26447141
 ">Interview</a> with Claire Schwartz. Discuss Dove’s philosophy of history, the difficulty and nuances of translation, and the way German has influenced her poetic form.</p></li></ul>
 <b>Essays:</b>
 <ul><li><p><a href="https://www.jstor.org/stable/27654893
 ">"The Fire This Time"</a>: Tells the story of Rita Dove’s house being struck by lightning – one of the inspirations for her collection of poems <i>American Smooth</i>.</p></li></ul>
 <ul><li><p><a href="https://www.jstor.org/stable/40375707
-">"Telling it like it I-S ‘IS’: Narrative Techniques in Melvin Tolson’s ‘Harlem Gallery’"</a>: An essay written by Dove in the ‘90s, which provides critical context from the time of its publication during the Black Arts Movement, and a short analysis.</p></li></ul>
+">"Telling it like it I-S ‘IS’: Narrative Techniques in Melvin Tolson’s ‘Harlem Gallery’"</a>: An essay written by Dove in the ‘90s, which provides critical context from the time of <i>Harlem Gallery</i>'s publication during the Black Arts Movement, and a short analysis.</p></li></ul>
 <b>Poems:</b>
 <ul><li><p><a href="https://furiousflower.org/rita-dove/">Furious Flower Archives</a> website providing videos of Dove reading select poems, and annotations providing context.</p></li></ul>
 <ul><li><p><a href="https://www.poetryfoundation.org/poets/rita-dove">Selection</a> of poems. Resource also includes bibliography of Dove’s works, lyrics, and publications in periodical journals.</p></li></ul>
